--- a/public/templates/content-area.html
+++ b/public/templates/content-area.html
@@ -17,7 +17,8 @@
 
 		<div class="defaultClass7" data-drop="true" data-jqyoui-options jqyoui-droppable ng-show="my.message3">SAMPLE3</div>
 		<div class="defaultClass8" data-drop="true" data-jqyoui-options jqyoui-droppable ng-show="my.message3">SAMPLE3</div>
-		<div class="{{pageObject.columns[0].items[2].cssClass}}" ng-if="addDiv3.boolean">SAMPLE3</div>		
+		<div class="{{pageObject.columns[0].items[2].cssClass}}" ></div>
+		<!-- ng-if="addDiv3.boolean" -->		
 
 		<div class="defaultClass5" data-drop="true" data-jqyoui-options jqyoui-droppable ng-show="my.message2">SAMPLE2</div>
 		<div class="defaultClass6" data-drop="true" data-jqyoui-options jqyoui-droppable ng-show="my.message2">SAMPLE2</div>
