--- a/public/templates/navBar.html
+++ b/public/templates/navBar.html
@@ -7,7 +7,7 @@
 						<a class="nav-link" href="#">Publish <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Review</a>
+						<a class="nav-link" href="/rpojects/view">Review</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Projects</a>
