--- a/public/templates/new-page.html
+++ b/public/templates/new-page.html
@@ -21,7 +21,7 @@
 			</tr> -->
 			<tr>
 				<td><label>Layouts: </label></td>
-			    <td><select name="singleSelect" ng-model="page.body" ng-options="option.value for option in data.availableOptions"></select></td>
+			    <td><select name="singleSelect" ng-model="page.body" ng-options="option.value for option in cssOptions.availableOptions"></select></td>
 			</tr>	
 			<!-- <tr>
 				<td><label>CSS Template: </label></td>
@@ -34,23 +34,6 @@
 			</tr>	
 		</form>
 	</table>	
-	<!-- section to select styles -->
-    <!-- <div class="well">
-        <form>
-
-            <div class="form-group">
-                <label>Theme</label>
-                <select class="form-control" ng-model="css" ng-options="bootstrap.url as bootstrap.name for bootstrap in bootstraps">
-                </select>
-            </div>
-
-            <div class="form-group">
-                <label>Layout</label>
-                <select class="form-control" ng-model="layout" ng-options="layout.url as layout.name for layout in layouts"></select>
-            </div>
-
-        </form>
-    </div> -->
 
     <hr>
 </div>
