--- a/public/templates/pageList.html
+++ b/public/templates/pageList.html
@@ -1,10 +1,10 @@
 <div class="left panel col-md-3" ng-controller="AddPageCtrl" >
 		<div>
 			<h2>Page</h2>		
-			<button type="button" class="btn" ng-click="newPage()">+</button>
-			<button><div go-for>Edit</div></button>
-			<button ng-click="deletePage()">Delete</button>
-			<button type="button" class="btn" ng-click="">-</button>
+			<button type="button" class="btn" ng-click="newPage()">Add</button>
+			<button type="button" class="btn" ng-click="editPage()">Edit</button>
+			<button type="button" class="btn" ng-click="deletePage()">Delete</button>
+			
 		</div>
 		
 		<div ng-controller="GetListCtrl">
