--- a/public/templates/view.html
+++ b/public/templates/view.html
@@ -1,1 +1,1 @@
-<ng-include src="templates/currentPageView.html" scope="" onload=""></ng-include>
+<ng-include src="templates/currentPageView.html"></ng-include>
