--- a/public/templates/content-area.html
+++ b/public/templates/content-area.html
@@ -7,12 +7,14 @@
 	<div class="{{pageObject.columns[0].items[0].cssClass}}" type="{{pageObject.columns[0].items[0].type}}" data-drop="true" data-jqyoui-options jqyoui-droppable="{onDrop:'dropFunc'}" ng-show="!my.message" ng-hide="my.message">
 		<a href style="display:block;position:absolute;left:{{imgX}}px; top:{{imgY}}px;"><img src="{{pageObject.columns[0].items[0].image.src}}" style="position:relative;" width="{{pageObject.columns[0].items[0].image.width}}" height="{{pageObject.columns[0].items[0].image.height}}" align="{{pageObject.columns[0].items[0].image.align}}" ng-click="alert(this)" ng-if="addImage.boolean"></a>
 		<!-- <input type="file" multiple ng-if="addImage.boolean"/> -->
+		<image-drop ng-if="addImage.boolean"></image-drop>
+		<div>{{pageObject.columns[0].items[0].type}}</div>
 	</div>
 
 	<div class="{{pageObject.columns[0].items[1].cssClass}}" type="{{pageObject.columns[0].items[1].type}}" ng-show="!my.message" ng-hide="my.message" ng-click="alert(this)"><h1 class="{{pageObject.columns[0].items[1].type}}" style="{{pageObject.columns[0].items[1].headerStyle}}">{{pageObject.columns[0].items[1].headerText}}</h1>
-
+		
 		<p class="{{pageObject.columns[0].items[1].type}}" style="{{pageObject.columns[0].items[1].headerStyle}}" ng-click="tinyMceLoad()" ng-bind-html="pageObject.columns[0].items[1].text"></p></div>
-				
+		
 		
 
 		<div class="defaultClass7" data-drop="true" data-jqyoui-options jqyoui-droppable ng-show="my.message3">SAMPLE3</div>
