Added some bootstrap

--- a/public/templates/content-area.html
+++ b/public/templates/content-area.html
@@ -28,10 +28,10 @@
 		<div class="defaultClass4" data-drop="true" data-jqyoui-options jqyoui-droppable ng-show="my.message">SAMPLE</div>
 		
 
-		<div class="formatButton col-md-6" >
+		<div class="formatButton panel panel-default col-md-6" >
 			<ul class="list-inline > li">
 
-				<li><h3><button class="btn" ng-click="updateHtml()">Update</button></h3></li>
+				<li><h3><button class="btn" ng-click="updateHtml()">Save Changes</button></h3></li>
 				<li><h3><button class="{{classesCss[0]}} btn" ng-click="toggleClass1()"><i class="fa fa-braille" aria-hidden="true" ></i></button></h3></li>
 				<li><h3><button class="{{classesCss[1]}} btn" ng-click="toggleClass2()"><i class="fa fa-braille" aria-hidden="true" ></i></button></h3></li>
 				<li><h3><button class="btn" ng-click="toggleClass3()"><i class="fa fa-braille" aria-hidden="true" ></i></button></h3></li>
