--- a/public/templates/content-area.html
+++ b/public/templates/content-area.html
@@ -6,9 +6,13 @@
 	
 	<div idNo="{{pageObject.columns[0].items[0].id}}" class="{{pageObject.columns[0].items[0].cssClass}}" type="{{pageObject.columns[0].items[0].type}}" data-drop="true" data-jqyoui-options jqyoui-droppable="{onDrop:'dropFunc'}" ng-show="!my.message" ng-hide="my.message">
 		<a href style="display:block;position:absolute;left:{{imgX}}px; top:{{imgY}}px;"><img src="{{pageObject.columns[0].items[0].image.src}}" style="position:relative;" width="{{pageObject.columns[0].items[0].image.width}}" height="{{pageObject.columns[0].items[0].image.height}}" align="{{pageObject.columns[0].items[0].image.align}}" ng-click="alert(this)" ng-if="addImage.boolean"></a>
-		<!-- <input type="file" multiple ng-if="addImage.boolean"/> -->
-		<image-drop ng-if="addImage.boolean"></image-drop>
+		<!-- <input id="upload" type="file" style="display:none;" multiple ng-if="addImage.boolean"/> -->
+		
+		<input id="upload" type="file" style="display:none;" ng-if="addImage.boolean"/><button id="upload2" type="button" uploadfile ng-if="addImage.boolean">Upload</button>
+		
+		<!-- <image-drop class="findme" ng-if="addImage.boolean">SCOPES</image-drop> -->
 		<div>{{pageObject.columns[0].items[0].type}}</div>
+
 	</div>
 
 	<div class="{{pageObject.columns[0].items[1].cssClass}}" idNo="{{pageObject.columns[0].items[1].id}}" type="{{pageObject.columns[0].items[1].type}}" data-drop="true" data-jqyoui-options jqyoui-droppable="{onDrop:'dropFunc'}" ng-show="!my.message" ng-hide="my.message" ng-click="alert(this)"><h1 class="{{pageObject.columns[0].items[1].type}}" style="{{pageObject.columns[0].items[1].headerStyle}}">{{pageObject.columns[0].items[1].headerText}}</h1>
