--- a/public/templates/content-area.html
+++ b/public/templates/content-area.html
@@ -8,7 +8,7 @@
 		<a href style="display:block;position:absolute;left:{{imgX}}px; top:{{imgY}}px;"><img src="{{pageObject.columns[0].items[0].image.src}}" style="position:relative;" width="{{pageObject.columns[0].items[0].image.width}}" height="{{pageObject.columns[0].items[0].image.height}}" align="{{pageObject.columns[0].items[0].image.align}}" ng-click="alert(this)" ng-if="addImage.boolean"></a>
 		<!-- <input id="upload" type="file" style="display:none;" multiple ng-if="addImage.boolean"/> -->
 		
-		<input id="upload" type="file" style="display:none;" ng-if="addImage.boolean"/><button id="upload2" type="button" uploadfile ng-if="addImage.boolean">Upload</button>
+		<a href="#" style="display:block;position:absolute;left:{{imgX}}px; top:{{imgY}}px;"><input id="upload" type="file"  multiple ng-click="dropWatch()" ng-if="addImage.boolean"/><button id="upload2" type="button" ng-if="addImage.boolean">Upload</button></a>
 		
 		<!-- <image-drop class="findme" ng-if="addImage.boolean">SCOPES</image-drop> -->
 		<div>{{pageObject.columns[0].items[0].type}}</div>
