--- a/public/templates/content-area.html
+++ b/public/templates/content-area.html
@@ -8,13 +8,22 @@
 		<a href style="display:block;position:absolute;left:{{imgX}}px; top:{{imgY}}px;"><img src="{{pageObject.columns[0].items[0].image.src}}" style="position:relative;" width="{{pageObject.columns[0].items[0].image.width}}" height="{{pageObject.columns[0].items[0].image.height}}" align="{{pageObject.columns[0].items[0].image.align}}" ng-click="alert(this)" ng-if="addImage.boolean"></a>
 		<!-- <input id="upload" type="file" style="display:none;" multiple ng-if="addImage.boolean"/> -->
 		
-		<a href="javascript:void(0)" style="display:block;position:absolute;left:{{imgX}}px; top:{{imgY}}px;"><input id="upload" type="file" uploadfile dropeventwatch="dropEventWatch.boolean" ng-file-select="changeFunc()"/></a>
+		<a href="javascript:void(0)" style="display:none;position:absolute;left:{{imgX}}px; top:{{imgY}}px;"><input id="upload" type="file" uploadfile dropeventwatch="dropEventWatch.boolean" ng-file-select="changeFunc()"/></a>
 		
 		<!-- <image-drop class="findme" ng-if="addImage.boolean">SCOPES</image-drop> -->
 		<div>{{pageObject.columns[0].items[0].type}}</div>
 
 	</div>
-
+	<!------>
+	<div class="dropzone" file-dropzone="[image/png, image/jpeg, image/gif]"
+                  file="image" file-name="imageFileName" data-max-file-size="3">
+      <span>Drop Image Here</span>
+    </div>
+    <div class="image-container">
+      <img ng-src={{image}} />
+      <span class="file-name">{{imageFileName}}</span>
+    </div>
+	<!------>	
 	<div class="{{pageObject.columns[0].items[1].cssClass}}" idNo="{{pageObject.columns[0].items[1].id}}" type="{{pageObject.columns[0].items[1].type}}" data-drop="true" data-jqyoui-options jqyoui-droppable="{onDrop:'dropFunc'}" ng-show="!my.message" ng-hide="my.message" ng-click="alert(this)"><h1 class="{{pageObject.columns[0].items[1].type}}" style="{{pageObject.columns[0].items[1].headerStyle}}">{{pageObject.columns[0].items[1].headerText}}</h1>
 		<div>{{pageObject.columns[0].items[1].type}}</div>
 		<p class="{{pageObject.columns[0].items[1].type}}" style="{{pageObject.columns[0].items[1].headerStyle}}" ng-click="textEditorShow()" ng-bind-html="pageObject.columns[0].items[1].text"></p></div>
