--- a/public/templates/elementList.html
+++ b/public/templates/elementList.html
@@ -15,7 +15,8 @@
 					<button tag="{{elements[1]}}" ng-click="addElement(e,elements[1])" 	class="list-group-item">Image</button></li>
 			</ul>
 		<div class="col-md-4" ng-controller="ElementListCtrl">
-			
+			<li ng-repeat="img in imageList"><img src="/images/{{img}}" height="40" width="40"></li>
+			 
 		</div>
 	</div>	
 </div>		
